--- a/Docker.Dotnet.UI/Components/Pages/DockerPages/ContainersPage.razor
+++ b/Docker.Dotnet.UI/Components/Pages/DockerPages/ContainersPage.razor
@@ -433,7 +433,7 @@
         }
 
         @* style="height: 60vh; overflow-y: auto;" *@
-        <MudTabs Elevation="0" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-4 fixed-tabs-panel">
+        <MudTabs Elevation="0" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-4 fixed-tabs-panel" EnableScrollButtons="true">
             <MudTabPanel Text="@Localizer["BASIC"]">
                 <MudStack Spacing="3">
                     <MudTextField @bind-Value="Vm!.CreateModel.Image"
@@ -488,8 +488,9 @@
                 </MudStack>
             </MudTabPanel>
 
-            <MudTabPanel Text="@Localizer["PORTS"]">
+            <MudTabPanel Text="@Localizer["PORTS_AND_VOLUMES"]">
                 <MudStack Spacing="3">
+                    <MudText Typo="Typo.subtitle1">@Localizer["PORTS"]</MudText>
                     @foreach (var port in Vm!.CreateModel.Ports)
                     {
                         <MudStack Row="true" Spacing="2" AlignItems="AlignItems.Center">
@@ -524,11 +525,10 @@
                                OnClick="@(() => Vm!.CreateModel.Ports.Add(new PortMappingModel()))">
                         @Localizer["ADD_PORT"]
                     </MudButton>
-                </MudStack>
-            </MudTabPanel>
 
-            <MudTabPanel Text="@Localizer["VOLUMES"]">
-                <MudStack Spacing="3">
+                    <MudDivider Class="my-4"/>
+
+                    <MudText Typo="Typo.subtitle1">@Localizer["VOLUMES"]</MudText>
                     @foreach (var volume in Vm!.CreateModel.Volumes)
                     {
                         <MudStack Row="true" Spacing="2" AlignItems="AlignItems.Center">
