--- a/Docker.Dotnet.UI/Components/Pages/DockerPages/ContainersPage.razor
+++ b/Docker.Dotnet.UI/Components/Pages/DockerPages/ContainersPage.razor
@@ -433,7 +433,7 @@
         }
 
         @* style="height: 60vh; overflow-y: auto;" *@
-        <MudTabs Elevation="0" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-4 fixed-tabs-panel" EnableScrollButtons="true">
+        <MudTabs Elevation="0" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-4 fixed-tabs-panel">
             <MudTabPanel Text="@Localizer["BASIC"]">
                 <MudStack Spacing="3">
                     <MudTextField @bind-Value="Vm!.CreateModel.Image"
